k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: mmsummary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: mmsummary-backend
        image: mmsummary-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mmsummary
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
  type: LoadBalancer
